# firefly-audio

./: Cargo.toml  README.md
src/: basic_types.rs  channels.rs  effects.rs  error.rs  filters.rs  lfo.rs  lib.rs  manager.rs  modulators.rs  node.rs  nodes.rs  pcm.rs  processor.rs  processors.rs  reader.rs  sources.rs
